Добавлены новые макросы

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% from 'macros/labeled_input.html' import labeled_input %}
+{% from 'macros/title.html' import title %}
 
 
 {% block title %}Вход{% endblock %}
@@ -9,14 +10,14 @@
 {% block head %}
     <link rel="stylesheet" href="/static/styles/auth.css">
     <link rel="stylesheet" href="/static/styles/macros/labeled-input.css">
-    <link rel="stylesheet" href="/static/styles/elements/title.css">
+    <link rel="stylesheet" href="/static/styles/macros/title.css">
 {% endblock %}
 
 
 {% block content %}
     <main>
         <form id="auth-form" method="post">
-            <div class="title">Вход</div>
+            {{ title(text='Вход') }}
 
             <div id="fields">
                 {{ labeled_input(name='login', label='Логин', required=True) }}
