--- a/static/styles/macros/title.css
+++ b/static/styles/macros/title.css
@@ -1,7 +1,8 @@
 .title {
+    margin: 0;
     text-align: center;
     font-size: 2rem;
-    font-weight: 600;
+    font-weight: 700;
 
     &.left {
         text-align: left;
