--- a/templates/macros/title.html
+++ b/templates/macros/title.html
@@ -1,3 +1,3 @@
 {% macro title(text='Title', alignment='center') %}
-    <div class="title {{ alignment }}">{{ text }}</div>
+    <h1 class="title {{ alignment }}">{{ text }}</h1>
 {% endmacro %}
