--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -18,11 +18,23 @@
 }
 
 html, body {
-    min-height: 100vh;
+    height: 100vh;
     margin: 0;
     color: var(--text);
     font-family: Mulish, sans-serif;
     background: var(--bg-dark);
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+.layout-wrapper {
+    flex: 1 1;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 label {
