--- a/static/styles/header.css
+++ b/static/styles/header.css
@@ -1,8 +1,11 @@
 header {
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 40px;
+    position: sticky;
+    top: 0;
+    height: 52px;
     padding: 8px 8px;
     background: var(--primary);
     box-shadow: var(--shadow);
