--- a/templates/base.html
+++ b/templates/base.html
@@ -19,10 +19,12 @@
     {% endblock %}
 </head>
 <body>
-    {% include 'header.html' %}
-    {% block content %}
-    
-    {% endblock %}
+    <div class="layout-wrapper">
+        {% include 'header.html' %}
+        {% block content %}
+        
+        {% endblock %}
+    </div>
 
     {% if not is_not_authenticated %}
     <script>
