--- a/templates/menu/view.html
+++ b/templates/menu/view.html
@@ -13,7 +13,7 @@
 
 
 {% block content %}
-    <div class="wrapper">
+    <div class="grid-wrapper">
 
         <div class="top-bar">
             <div class="top-bar__left">
@@ -30,14 +30,15 @@
             </div>
         </div>
         
+
+        
         {% call sidebar(header='День') %}
         <ul id="daysList" class="days-list">
             {% for date in dates %}
-                {% if date == today %}
-                <li class="day day--selected" data-day="{{ date }}">{{ date.strftime('%d %B') }} (сегодня)</li>    
-                {% else %}
-                <li class="day" data-day="{{ date }}">{{ date.strftime('%-d %B') }}</li>
-                {% endif %}
+                {% set selected = 'day--selected' if date == selected_date else '' %}
+                {% set today = ' (сегодня)' if date == today_date else '' %}
+
+                <li class="day {{ selected }}" data-day="{{ date }}">{{ date.strftime('%-d %B') }}{{ today }}</li>    
 
             {% endfor %}
         
