Добавлен скролл и генерация меню Добавлен скролл на сетку блюд в меню. Добавлена функция для генерации шаблона страницы меню.

--- a/templates/menu/view.html
+++ b/templates/menu/view.html
@@ -47,20 +47,32 @@
             
             
         <main>
+            {% if not menu or not menu.dishes %}
+                <p class="no-menu-message"><strong>На эту дату нет меню.</strong></p>
+            {% else %}
+                
             <div class="menu-grid">
+                {% for dish in menu.dishes %}
+                    
                 <div class="menu-grid__item">
                     <div class="dish">
-                        <div class="dish__name">Картофель</div>
-                        <ul class="dish__composition">
-                            <li>Картофель</li>
-                            <li>Картофель</li>
-                            <li>Картофель</li>
-                        </ul>
+                        <a class="dish__link" href="/dishes/{{ dish.id }}">
+                            <div class="dish__name">{{ dish.name }}</div>
+                            <ul class="dish__composition">
+                                {% for product in dish.products %}
+
+                                <li>{{ product }}</li>
+                                
+                                {% endfor %}
+                            </ul>
+                        </a>
                     </div>
                 </div>
-
                 
+                {% endfor %}
             </div>
+
+            {% endif %}
         </main>
     </div>
 
