--- a/static/styles/menu.css
+++ b/static/styles/menu.css
@@ -53,17 +53,49 @@
     color: var(--primary);
 }
 
+main {
+    display: flex;
+}
+
+.no-menu-message {
+    width: 100%;
+    font-size: 1.5rem;
+    text-align: center;
+    align-self: center;
+}
 
 .menu-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-auto-rows: 124px;
+    row-gap: 0.5rem;
+    column-gap: 0.5rem;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    scroll-behavior: smooth;
 }
 
 .menu-grid__item {
-    padding: 8px 12px;
+    box-sizing: border-box;
     background: var(--bg);
+    border: solid 2px transparent;
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
+    overflow: hidden;
+    transition: border 0.1s ease-in-out;
+
+    &:hover {
+        border: solid 2px var(--primary);
+    }
+
+}
+
+.dish__link {
+    display: block;
+    padding: 8px 12px;
+    color: var(--text);
+    text-decoration: none;
 }
 
 .dish__name {
