--- a/static/styles/menu.css
+++ b/static/styles/menu.css
@@ -38,7 +38,6 @@
 }
 
 .day {
-    padding: 4px 8px;
     border-radius: var(--border-radius-small);
     font-size: 1.1rem;
     transition: background 0.05s ease-in-out;
@@ -46,7 +45,16 @@
     &:hover {
         background: var(--bg-dark-hover);
     }
+    
+}
 
+.day__link {
+    display: block;
+    height: 100%;
+    width: 100%;
+    padding: 4px 8px;
+    color: inherit;
+    text-decoration: none;
 }
 
 .day--selected {
