--- a/templates/menu/view.html
+++ b/templates/menu/view.html
@@ -14,7 +14,7 @@
 
 {% block content %}
     <div class="grid-wrapper">
-
+        <form id="filtersForm" style="display: none;"></form>
         <div class="top-bar">
             <div class="top-bar__left">
                 {{ title(text='Меню', alignment='left') }}
@@ -22,9 +22,17 @@
     
             <div class="top-bar__right">
                 <div class="filters">
-                    <select name="type" id="menuTypeSelect" class="menu-type">
+                    <select name="type" id="menuTypeSelect" class="menu-type" form="filtersForm">
+                        {% if menu.type == "breakfast" %}
+                        <option value="breakfast" selected>Завтрак</option>
+                        <option value="lunch">Обед</option>
+                        {% elif menu.type == "lunch" %}
+                        <option value="breakfast">Завтрак</option>
+                        <option value="lunch" selected>Обед</option>
+                        {% else %}
                         <option value="breakfast">Завтрак</option>
                         <option value="lunch">Обед</option>
+                        {% endif %}
                     </select>
                 </div>
             </div>
@@ -37,9 +45,11 @@
             {% for date in dates %}
                 {% set selected = 'day--selected' if date == selected_date else '' %}
                 {% set today = ' (сегодня)' if date == today_date else '' %}
+                {% set type = menu.type %}
 
-                <li class="day {{ selected }}" data-day="{{ date }}">{{ date.strftime('%-d %B') }}{{ today }}</li>    
-
+                <li class="day {{ selected }}" data-day="{{ date }}">
+                    <a class="day__link" href="/menu/{{ date }}?type={{ type }}">{{ date.strftime('%-d %B') }}{{ today }}</a>
+                </li>
             {% endfor %}
         
         </ul>
@@ -61,7 +71,7 @@
                             <ul class="dish__composition">
                                 {% for product in dish.products %}
 
-                                <li>{{ product }}</li>
+                                <li>{{ product.name }}</li>
                                 
                                 {% endfor %}
                             </ul>
@@ -76,4 +86,17 @@
         </main>
     </div>
 
+    
+{% endblock %}
+    
+    
+{% block scripts %}
+    <script>
+        const menuTypeSelect = document.getElementById('menuTypeSelect');
+        const filtersForm = document.getElementById('filtersForm');
+
+        menuTypeSelect.addEventListener('change', function(event) {
+            filtersForm.requestSubmit();
+        });
+    </script>    
 {% endblock %}
