--- a/templates/read_dish.html
+++ b/templates/read_dish.html
@@ -14,6 +14,7 @@
             {% if breakfasts %}
                 {% for dish in breakfasts %}
                     <div>{{ dish.name }}</div>
+                    <button type="button" onclick="window.location.href ='/{{ dish.id }}/edit_dish'">Изменить блюдо</button>
                     <button type="button" onclick="window.location.href ='/{{ dish.id }}/delete_dish'">Удалить блюдо</button>
                 {% endfor %}
             {% else %}
@@ -23,6 +24,7 @@
             {% if salads %}
                 {% for dish in salads %}
                     <div>{{ dish.name }}</div>
+                    <button type="button" onclick="window.location.href ='/{{ dish.id }}/edit_dish'">Изменить блюдо</button>
                     <button type="button" onclick="window.location.href ='/{{ dish.id }}/delete_dish'">Удалить блюдо</button>
                 {% endfor %}
             {% else %}
@@ -32,6 +34,7 @@
             {% if soups %}
                 {% for dish in soups %}
                     <div>{{ dish.name }}</div>
+                    <button type="button" onclick="window.location.href ='/{{ dish.id }}/edit_dish'">Изменить блюдо</button>
                     <button type="button" onclick="window.location.href ='/{{ dish.id }}/delete_dish'">Удалить блюдо</button>
                 {% endfor %}
             {% else %}
@@ -41,6 +44,7 @@
             {% if main_dishes %}
                 {% for dish in main_dishes %}
                     <div>{{ dish.name }}</div>
+                    <button type="button" onclick="window.location.href ='/{{ dish.id }}/edit_dish'">Изменить блюдо</button>
                     <button type="button" onclick="window.location.href ='/{{ dish.id }}/delete_dish'">Удалить блюдо</button>
                 {% endfor %}
             {% else %}
@@ -50,6 +54,7 @@
             {% if drinks %}
                 {% for dish in drinks %}
                     <div>{{ dish.name }}</div>
+                    <button type="button" onclick="window.location.href ='/{{ dish.id }}/edit_dish'">Изменить блюдо</button>
                     <button type="button" onclick="window.location.href ='/{{ dish.id }}/delete_dish'">Удалить блюдо</button>
                 {% endfor %}
             {% else %}
@@ -59,6 +64,7 @@
             {% if bread %}
                 {% for dish in bread %}
                     <div>{{ dish.name }}</div>
+                    <button type="button" onclick="window.location.href ='/{{ dish.id }}/edit_dish'">Изменить блюдо</button>
                     <button type="button" onclick="window.location.href ='/{{ dish.id }}/delete_dish'">Удалить блюдо</button>
                 {% endfor %}
             {% else %}
