--- a/static/styles/macros/sidebar.css
+++ b/static/styles/macros/sidebar.css
@@ -1,11 +1,13 @@
 .sidebar {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    min-height: 250px;
+    height: 100%;
     padding: 8px 8px;
     background: var(--bg);
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
-    min-height: 250px;
 }
 
 .sidebar__header {
