--- a/static/styles/macros/sidebar.css
+++ b/static/styles/macros/sidebar.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     min-height: 250px;
-    height: 100%;
+    height: fit-content;
+    max-height: 100%;
     padding: 8px 8px;
     background: var(--bg);
     border-radius: var(--border-radius);
