--- a/templates/menu/view.html
+++ b/templates/menu/view.html
@@ -23,14 +23,12 @@
             <div class="top-bar__right">
                 <div class="filters">
                     <select name="type" id="menuTypeSelect" class="menu-type" form="filtersForm">
-                        {% if menu %}
-                            {% if menu.type == "breakfast" %}
-                            <option value="breakfast" selected>Завтрак</option>
-                            <option value="lunch">Обед</option>
-                            {% elif menu.type == "lunch" %}
-                            <option value="breakfast">Завтрак</option>
-                            <option value="lunch" selected>Обед</option>
-                            {% endif %}
+                        {% if menu.type == "breakfast" %}
+                        <option value="breakfast" selected>Завтрак</option>
+                        <option value="lunch">Обед</option>
+                        {% elif menu.type == "lunch" %}
+                        <option value="breakfast">Завтрак</option>
+                        <option value="lunch" selected>Обед</option>
                         {% else %}
                         <option value="breakfast">Завтрак</option>
                         <option value="lunch">Обед</option>
@@ -50,7 +48,7 @@
                 {% set type = menu.type %}
 
                 <li class="day {{ selected }}" data-day="{{ date }}">
-                    <a class="day__link" href="/menu/{{ date }}?type={{ type }}">{{ date.strftime('%-d %B') }}{{ today }}</a>
+                    <a class="day__link" href="/menu/{{ date }}?type={{ type }}">{{ date.strftime(date_format) }}{{ today }}</a>
                 </li>
             {% endfor %}
         
