--- a/templates/edit_dish.html
+++ b/templates/edit_dish.html
@@ -19,22 +19,22 @@
         <div>
             <label>Категория</label>
             <select id="category" name="category" required>
-                <option value="Breakfasts" {% if category == 'Breakfasts' %} selected {% endif %}>
+                <option value="breakfasts" {% if category == 'breakfasts' %} selected {% endif %}>
                     Завтраки
                 </option>
-                <option value="Salads" {% if category == 'Salads' %} selected {% endif %}>
+                <option value="salads" {% if category == 'salads' %} selected {% endif %}>
                     Салаты
                 </option>
-                <option value="Soups" {% if category == 'Soups' %} selected {% endif %}>
+                <option value="soups" {% if category == 'soups' %} selected {% endif %}>
                     Супы
                 </option>
-                <option value="Main dishes" {% if category == 'Main dishes' %} selected {% endif %}>
+                <option value="main_dishes" {% if category == 'main_dishes' %} selected {% endif %}>
                     Основные блюда
                 </option>
-                <option value="Drinks" {% if category == 'Drinks' %} selected {% endif %}>
+                <option value="drinks" {% if category == 'drinks' %} selected {% endif %}>
                     Напитки
                 </option>
-                <option value="Bread" {% if category == 'Bread' %} selected {% endif %}>
+                <option value="bread" {% if category == 'bread' %} selected {% endif %}>
                     Хлеб
                 </option>
             </select>
