--- a/templates/add_dish.html
+++ b/templates/add_dish.html
@@ -19,12 +19,12 @@
         <div>
           <label>Категория</label>
           <select id="category" name="category" required>
-                            <option value="Breakfasts">Завтраки</option>
-                            <option value="Salads">Салаты</option>
-                            <option value="Soups">Супы</option>
-                            <option value="Main dishes">Основные блюда</option>
-                            <option value="Drinks">Напитки</option>
-                            <option value="Bread">Хлеб</option>
+                            <option value="breakfasts">Завтраки</option>
+                            <option value="salads">Салаты</option>
+                            <option value="soups">Супы</option>
+                            <option value="main_dishes">Основные блюда</option>
+                            <option value="drinks">Напитки</option>
+                            <option value="bread">Хлеб</option>
           </select>
         </div>
 
