--- a/templates/start.html
+++ b/templates/start.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <button onclick="document.location.href='/login'">войти</button>
-    <button onclick="document.location.href='/register'">зарегистрироваться</button>
+    <button onclick="document.location.href='/enter'">войти</button>
+    <button onclick="document.location.href='/registeration'">зарегистрироваться</button>
 </body>
 </html>
