--- a/templates/add_menu.html
+++ b/templates/add_menu.html
@@ -21,7 +21,7 @@
             </div>
 
             <div>
-                <label>Завтраки</label>
+                <label for="breakfasts">Завтраки</label>
                 <select id="breakfasts" name="breakfasts">
                     <option value="" selected></option>
                     {% for dish in dishes %}
@@ -31,7 +31,7 @@
                     {% endfor %}
                 </select>
 
-                <label>Салаты</label>
+                <label for="salads">Салаты</label>
                 <select id="salads" name="salads">
                     <option value="" selected></option>
                     {% for dish in dishes %}
@@ -41,7 +41,7 @@
                     {% endfor %}
                 </select>
 
-                <label>Супы</label>
+                <label for="soups">Супы</label>
                 <select id="soups" name="soups">
                     <option value="" selected></option>
                     {% for dish in dishes %}
@@ -51,7 +51,7 @@
                     {% endfor %}
                 </select>
 
-                <label>Основные блюда</label>
+                <label for="main_dishes">Основные блюда</label>
                 <select id="main_dishes" name="main_dishes">
                     <option value="" selected></option>
                     {% for dish in dishes %}
@@ -61,7 +61,7 @@
                     {% endfor %}
                 </select>
 
-                <label>Напитки</label>
+                <label for="drinks">Напитки</label>
                 <select id="drinks" name="drinks">
                     <option value="" selected></option>
                     {% for dish in dishes %}
@@ -71,7 +71,7 @@
                     {% endfor %}
                 </select>
 
-                <label>Хлеб</label>
+                <label for="bread">Хлеб</label>
                 <select id="bread" name="bread">
                     <option value="" selected></option>
                     {% for dish in dishes %}
@@ -85,6 +85,11 @@
             <div>
                 <label for="price">Цена</label>
                 <input id="price" name="price" type="number" min="1" placeholder="Цена" required>
+            </div>
+
+            <div>
+                <label for="date">Дата</label>
+                <input id="date" name="date" type="date" placeholder="Дата" required>
             </div>
 
             <button type="submit">Подтвердить</button>
