--- a/templates/admin_menu.html
+++ b/templates/admin_menu.html
@@ -9,6 +9,7 @@
 
     {% block content %}
         {% for menu in menus %}
+            <div>{{ menu.date }}</div>
             <div>{{ menu.type }}</div>
             {% for dish in menu.dishes %}
                 <div>{{ dish.name }}</div>
@@ -28,7 +29,9 @@
     <button onclick="document.location.href='/add_menu'">Создать меню</button>
     <button onclick="document.location.href='/admin_read_dish'">Смотреть список блюд</button>
 
+    <button onclick="document.location.href='/admin_requisition'">Согласование заявок</button>
     <button onclick="document.location.href='/add_user'">Добавить пользователя</button>
+    <button onclick="document.location.href='/read_user'">Смотреть список пользователей</button>
     <button onclick="document.location.href='/exit'">Выйти</button>
 
 </body>
