--- a/templates/cook_menu.html
+++ b/templates/cook_menu.html
@@ -9,6 +9,7 @@
 
     {% block content %}
         {% for menu in menus %}
+            <div>{{ menu.date }}</div>
             <div>{{ menu.type }}</div>
             {% for dish in menu.dishes %}
                 <div>{{ dish.name }}</div>
@@ -29,6 +30,8 @@
     <button onclick="document.location.href='/read_product'">Смотреть список продуктов</button>
     <button onclick="document.location.href='/add_dish'">Создать блюдо</button>
     <button onclick="document.location.href='/read_dish'">Смотреть список блюд</button>
+    <button onclick="document.location.href='/cook_requisition'">Подать заявку на закупку продуктов</button>
+    <button onclick="document.location.href='/read_requisition'">Смотреть заявки на закупку продуктов</button>
 
     <button onclick="document.location.href='/exit'">Выйти</button>
 </body>
