--- a/templates/management/users/add.html
+++ b/templates/management/users/add.html
@@ -1,6 +1,7 @@
 {% extends 'management/users/users_base.html' %}
 
 {% from 'macros/labeled_input.html' import labeled_input %}
+{% from 'macros/labeled_select.html' import labeled_select  %}
 
 
 {% block title %}Добавить пользователя{% endblock %}
@@ -9,22 +10,26 @@
 {% block head %}
     {{ super() }}
     <link rel="stylesheet" href="/static/styles/macros/labeled-input.css">
+    <link rel="stylesheet" href="/static/styles/management/add_user.css">
 {% endblock %}
 
 
 {% block top_bar %}
     {{ super() }}
-    <button class="add-user-btn accent">Добавить</button>
+    <button id="add-user-btn" form="add-user-form" class="add-user-btn accent">Добавить</button>
 {% endblock %}
 
 
 {% block main %}
-    <div class="add-user-form">
-        {{ labeled_input(name='login', label='Логин', required=True) }}
-        {{ labeled_input(name='surname', label='Фамилия', required=True) }}
-        {{ labeled_input(name='name', label='Имя', required=True) }}
-        {{ labeled_input(name='patronymic', label='Отчество', required=True) }}
-        {{ labeled_input(name='password', label='Пароль', required=True) }}
-        {{ labeled_input(name='second_password', label='Повтор пароля', required=True) }}
-    </div>
+    <form id="add-user-form" class="add-user-form" method="post">
+        <div class="form-wrapper">
+            {{ labeled_input(name='login', label='Логин', required=True) }}
+            {{ labeled_input(name='surname', label='Фамилия', required=True) }}
+            {{ labeled_input(name='name', label='Имя', required=True) }}
+            {{ labeled_input(name='patronymic', label='Отчество', required=True) }}
+            {{ labeled_select(options = [('student', 'Ученик'), ('cook', 'Повар'), ('admin', 'Админ')], name='role', label='Роль', required=True) }}
+            {{ labeled_input(name='password', label='Пароль', type='password', required=True) }}
+            {{ labeled_input(name='second_password', label='Повтор пароля', type='password', required=True) }}
+        </div>
+    </form>
 {% endblock %}
