--- a/templates/management/users/users_base.html
+++ b/templates/management/users/users_base.html
@@ -20,7 +20,7 @@
     {% call sidebar(header='Меню') %}
     <nav class="users-nav">
         <ul class="users-nav__list">
-            <li><a href="/manage/users/">Список</a></li>
+            <li><a href="/manage/users">Список</a></li>
             <li><a href="/manage/users/add">Добавить</a></li>
         </ul>
     </nav>
