Редактирование пользователей + фиксы

--- a/templates/admin_menu.html
+++ b/templates/admin_menu.html
@@ -31,7 +31,7 @@
 
     <button onclick="document.location.href='/admin_requisition'">Согласование заявок</button>
     <button onclick="document.location.href='/add_user'">Добавить пользователя</button>
-    <button onclick="document.location.href='/read_user'">Смотреть список пользователей</button>
+    <button onclick="document.location.href='/read_users'">Смотреть список пользователей</button>
     <button onclick="document.location.href='/exit'">Выйти</button>
 
 </body>
