--- a/static/styles/management/menu/menu.css
+++ b/static/styles/management/menu/menu.css
@@ -2,22 +2,41 @@
     display: grid;
     width: 100%;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: 140px;
+    grid-auto-rows: 84px;
     gap: 8px;
 }
 
 .menu {
-    padding: 8px 12px;
     background: var(--bg);
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
 }
 
+.menu__link {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    padding: 8px;
+    text-decoration: none;
+    color: var(--text);
+}
+
 .menu__header {
-    margin: 0;
+    margin: 0 4px;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.menu__type {
+    color: var(--text-muted);
 }
 
 .menu__info {
+    display: flex;
+    gap: 6px;
     margin: 0;
     padding: 0;
     list-style: none;
@@ -26,7 +45,7 @@
 .menu__info li {
     width: fit-content;
     padding: 4px 8px;
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     background: var(--bg-light);
     border-radius: var(--border-radius);
     box-shadow: var(--shadow);
