--- a/templates/management/menus/view.html
+++ b/templates/management/menus/view.html
@@ -1,4 +1,4 @@
-{% extends 'management/menu/menu_base.html' %}
+{% extends 'management/menus/menu_base.html' %}
 
 
 
@@ -15,17 +15,24 @@
     <div class="menus-grid">
         {% for menu in menus %}
             <div class="menu">
-                <h2 class="menu__header">{{ menu.date }} | 
-                    {% if menu.type == 'breakfast' %}
-                        Завтрак
-                    {% elif menu.type == 'lunch' %}
-                        Обед
-                    {% endif %}
-                </h2>
+                <a href="manage/menus/{{ menu.id }}" class="menu__link">
 
-                <ul class="menu__info">
-                    <li>{{ menu.price }}</li>
-                </ul>
+                    <h2 class="menu__header">{{ menu.date.strftime('%-d.%m.%Y') }} | 
+                        <span class="menu__type">
+                            {% if menu.type == 'breakfast' %}
+                                Завтрак
+                            {% elif menu.type == 'lunch' %}
+                                Обед
+                            {% endif %}
+                        </span>
+                    </h2>
+    
+                    <ul class="menu__info">
+                        <li>{{ menu.price }}</li>
+                        <li>{{ menu.dishes|length }} блюда</li>
+                    </ul>
+
+                </a>
 
             </div>
         {% endfor %}
