--- a/templates/edit_abonement.html
+++ b/templates/edit_abonement.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Оформление абонимента</title>
+    <title>Оформление абонемента</title>
 </head>
 <body>
     Баланс: {{ balance }}
