--- a/templates/food_payment.html
+++ b/templates/food_payment.html
@@ -8,6 +8,8 @@
     <br><br>
     <a href="/edit_balance">Пополнить баланс</a>
     <br><br>
-    <a href="/edit_aboniment">Оформить абонимент</a>
+    <a href="/edit_aboniment">Оформить абонемент</a>
+    <br><br>
+    <a href="/main">Назад</a>
 </body>
 </html>
