--- a/templates/review_detail.html
+++ b/templates/review_detail.html
@@ -7,7 +7,7 @@
     <h1>Отзыв {{ review.id }}</h1>
 
     <div>
-        <p>{{ review.date }}</p>
+        <p>{{ review.date.strftime('%d.%m.%Y') }}</p>
         <p>{{ review.stars }} звёзд</p>
         <p>{{ review.content }}</p>
     </div>
