Изменено отображение количества блюд

--- a/templates/management/menus/view.html
+++ b/templates/management/menus/view.html
@@ -28,8 +28,8 @@
                     </h2>
     
                     <ul class="menu__info">
-                        <li>{{ menu.price }}</li>
-                        <li>{{ menu.dishes|length }} блюда</li>
+                        <li>{{ menu.price }}₽</li>
+                        <li>Блюд: {{ menu.dishes|length }}</li>
                     </ul>
 
                 </a>
