--- a/static/styles/grid_w_sidebar_layout.css
+++ b/static/styles/grid_w_sidebar_layout.css
@@ -5,7 +5,7 @@
     grid-template-columns: 210px 1fr;
     grid-template-rows: 60px minmax(0px, 1fr);
     row-gap: 12px;
-    column-gap: 12px;
+    column-gap: 8px;
     min-height: 100px;
     margin: 16px 16px;
 }
@@ -30,10 +30,12 @@
 }
 
 main {
+    box-sizing: border-box;
     display: flex;
     min-width: 100%;
     min-height: 100%;
     width: 100%;
     height: 100%;
+    padding: 0 4px;
     overflow: auto;
 }
